Test for JRUBY-7035

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>SeventyThirtyFive</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+  <%= csrf_meta_tags %> <%# this is what triggers the error in JRuby 1.7.1 and JRuby master cc9acba  %>
 </head>
 <body>
 
